--- a/ukwiecona/scss/utils/_variables.scss
+++ b/ukwiecona/scss/utils/_variables.scss
@@ -4,10 +4,22 @@ $play: ('Play', sans-serif);
 
 /* Devices width for media query mixin */
 $devices: (
-    'small': 250px,
-    'medium-small': 750px,
-    'medium': 1024px,
-    'large': 1366px
+  'small-p': 250px,
+  'small-l': 500px,
+  'medium-p': 768px,
+  'medium-l': 768px,
+  'large': 1366px
+);
+
+$devices-t: (
+  'small': 250px,
+  'medium': 768px,
+  'large': 1366px
+);
+
+$orientations: (
+  'l': 'landscape',
+  'p': 'portrait'
 );
 
 $root-font-sizes: (
