--- a/ukwiecona/scss/layout/_section-header.scss
+++ b/ukwiecona/scss/layout/_section-header.scss
@@ -1,33 +1,34 @@
 
 @keyframes tag-tilt {
   0%   {transform: rotate(0); transform-origin: 50% 0;}
-  33%  {transform: rotate(15deg); transform-origin: 50% 0;}
-  66% {transform: rotate(-5deg); transform-origin: 50% 0;}
-  100% {transform: rotate(0); transform-origin: 50% 0;}
+  33%  {transform: rotate(-15deg); transform-origin: 50% 0;}
+  100% {transform: rotate(5deg); transform-origin: 50% 0;}
 }
 
 .header.background {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
   
-  @include rwd('small') {
+  @include rwd('small-p', 'p') {
     @include background-img (
           'header-background', 'jpg', 
           -88, 0,
           'auto', '100vh');
   }
-  @include rwd('medium-small') {
+  @include rwd('small-l', 'l') {
     @include background-img (
         'header-background', 'jpg', 
          -50, 0,
         auto, '100vh');
   }
-  @include rwd('medium') {
+  @include rwd('medium-p', 'p') {
     @include background-img (
         'header-background', 'jpg', 
          0, 0,
         '100vw', 'auto');
   }
-  @include rwd('large') {
+  @include rwd('large', 'l') {
     @include background-img (
         'header-background', 'jpg', 
          0, 0,
@@ -35,161 +36,7 @@
   }
 }
 
-.header-tag {
-  height: 60vh;
-  @include rwd('medium-small') {
-    height: 80vh;
-  }
-  @include rwd('medium') {
-    height: 85vh;
-  }
-  @include rwd('large') {
-    height: 80vh;
-  }
 
-  perspective: 1500px;
-}
-
-.tag-container:hover {
-  transform: rotateY(180deg);
-  transition: transform 0.5s;
-} 
-
-.logo {
-  width: 16vw;
-  height: auto;
-
-  @include rwd('medium-small') {
-    width: 12vw;
-  }
-  @include rwd('medium') {
-    width: 7vw;
-  }
-  @include rwd('large') {
-    width: 5.5vw;
-  }
-}
-
-.portrait-picture {
-  border-radius: 50%;
-  border: 0.5px solid black;
-  width: 25vw;
-  height: auto;
-  margin-bottom: 2vh;
-
-  @include rwd('medium') {
-    width: 12.5vw;
-    margin-bottom: 5vh;
-
-  }
-  @include rwd('large') {
-    width: 10vw;
-    margin-bottom: 5vh;
-
-  }
-}
-
-
-.tag-container {
-  width: 62vw;
-  height: 60vh;
-  right: $tag-position-r;
-  top: -2vh;
-  float: right;
-
-  @include background-img (
-        'tag', 'svg', 
-        0, -2,
-        '100%', 'auto');
-  background-repeat: no-repeat;
-
-  animation-name: tag-tilt;
-  animation-duration: 5s;
-  animation-iteration-count: 1;
-
-  transition: transform 1s;
-  transform-style: preserve-3d;
-  position: relative;
-  div {
-    transform-style: preserve-3d;
-  }
-
-  
-  @include rwd ('medium-small') {
-    height: 75vh;
-    width: 50vw;
-    right: 5vw;
-  }
-  @include rwd ('medium') {
-    height: 85vh;
-    width: 30vw;
-    right: 5vw;
-  }
-
-  @include rwd ('large') {
-    height: 80vh;
-    width: 25vw;
-    right: 8vw;
-  }
-}
-
-.header-tag-front, .header-tag-back {
-  position: absolute;
-  text-align: center;
-  top: 13vh;
-  margin: 0 5.25vw 0 5.25vw;
-  transform: rotateX(0deg);
-  
-  @include rwd (medium) {
-    top: 15vh;
-    margin: 0 2.5vw 0 2.5vw;
-  }
-
-  @include rwd (large) {
-    top: 20vh;
-    margin: 0 2.5vw 0 2.5vw;
-  }
-
-  backface-visibility: hidden;
-}
-
-.header-tag-front {
-  @include rwd (large) {
-    top: 14vh
-  }
-}
-
-.header-tag-back {
-  transform: rotateY(180deg);
-}
-
-.localization {
-  flex-direction: row;
-  display: flex;
-  justify-content: center;
-  margin-top: 2.5vw;
-  backface-visibility: hidden;
-
-  img {
-    width: 3vw;
-    height: auto;
-    margin-right: 0.5vw;
-
-    @include rwd(medium) {
-      width: 1.5vw;
-    }
-    @include rwd(large) {
-      width: 1vw;
-    }
-  }
-
-  @include rwd(medium) {
-    margin-top: 5vw;
-  }
-  @include rwd(large) {
-    margin-top: 3.5vw;
-  }
-}
 
 
 .header-buttons {
@@ -199,17 +46,17 @@
   bottom: -2vh;
   justify-content: space-around;
 
-  @include rwd('medium-small') {
+  @include rwd('small-l', 'l') {
     @include centerer ($horizontal: false, $vertical: true, $direction: 'row');
     height: 20vh;
     bottom: 0vh;
   }
-  @include rwd('medium') {
+  @include rwd('medium-p', 'p') {
     @include centerer ($horizontal: false, $vertical: true, $direction: 'row');
     height: 15vh;
     bottom: 0vh;
   }
-  @include rwd('large') {
+  @include rwd('large', 'l') {
     @include centerer ($horizontal: false, $vertical: true, $direction: 'row');
     height: 20vh;
     bottom: 0vh;
